--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -19,6 +19,17 @@ p {
   font-size: large;
 }
 
+ol {
+  list-style-type: disc;
+  font-size: large;
+  margin-bottom: 30px;
+  padding-left: 2rem;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
 @layer components {
   .btn {
     @apply bg-[#12b488] text-white px-3 py-2 rounded-md text-white;
